fix(fix/navbar-and-banner-responsiveness): solved organization and contact views alignment with the rest of the components

--- a/client/src/Views/Contact/Contact.css
+++ b/client/src/Views/Contact/Contact.css
@@ -1,16 +1,19 @@
 .contact{
-    display: flex;
-    max-width: 1920px;
+    width: 100vw;
+}
+
+.contact-content{
+    width: 90vw;
+    max-width: 1440px;
     margin: auto;
     margin-top: 75px;
 }
 
 .forms{
-    width: 50vw;
+    width: 50%;
 }
 
 .title-div{
-    padding-left: 14px;
     margin-bottom: 28px;
 }
 
@@ -23,9 +26,8 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    width: 50vw;
+    width: 50%;
     max-width: 594px;
-    padding-left: 7vw;
 }
 
 .line-group-div{
