--- a/client/src/components/Button/Button.css
+++ b/client/src/components/Button/Button.css
@@ -34,5 +34,6 @@
     font-size: 20px;
     line-height: 24px;
     text-align: center;
+    font-weight: 600;
     color: #1D1D1B;
 }
